{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 139,
  "lineage": "5275b013-b5fe-7e91-01b7-ccbb180b1ba8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02fc5b3414ee0d1df",
            "arn": "arn:aws:ec2:eu-central-1:654654249071:elastic-ip/eipalloc-02fc5b3414ee0d1df",
            "association_id": "eipassoc-0e4acfd32cc1fdfc8",
            "domain": "vpc",
            "id": "eipalloc-02fc5b3414ee0d1df",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-065e1e205aa451e63",
            "private_dns": "ip-10-0-1-116.eu-central-1.compute.internal",
            "private_ip": "10.0.1.116",
            "public_dns": "ec2-52-28-241-175.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.28.241.175",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654249071:internet-gateway/igw-0ceccaf524ac73e82",
            "id": "igw-0ceccaf524ac73e82",
            "owner_id": "654654249071",
            "tags": {
              "Name": "product-processor-igw"
            },
            "tags_all": {
              "Name": "product-processor-igw"
            },
            "vpc_id": "vpc-06a8b5d5401c4bb0d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02fc5b3414ee0d1df",
            "association_id": "eipassoc-0e4acfd32cc1fdfc8",
            "connectivity_type": "public",
            "id": "nat-0f5e829a447ececd4",
            "network_interface_id": "eni-065e1e205aa451e63",
            "private_ip": "10.0.1.116",
            "public_ip": "52.28.241.175",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e9adedc1c1082a53",
            "tags": {
              "Name": "product-processor-nat-gw"
            },
            "tags_all": {
              "Name": "product-processor-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654249071:route-table/rtb-08666577dd6e1b73e",
            "id": "rtb-08666577dd6e1b73e",
            "owner_id": "654654249071",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f5e829a447ececd4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "product-processor-private-rt"
            },
            "tags_all": {
              "Name": "product-processor-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a8b5d5401c4bb0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654249071:route-table/rtb-04df4c97cb537adf5",
            "id": "rtb-04df4c97cb537adf5",
            "owner_id": "654654249071",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ceccaf524ac73e82",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "product-processor-public-rt"
            },
            "tags_all": {
              "Name": "product-processor-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a8b5d5401c4bb0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_docdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4aa3bcb1dd62c52",
            "route_table_id": "rtb-08666577dd6e1b73e",
            "subnet_id": "subnet-0e3d1e647eb645caf"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_docdb_subnet_1a",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f49cd723a9ef8b3",
            "route_table_id": "rtb-08666577dd6e1b73e",
            "subnet_id": "subnet-0144e27dbfce0996b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_ecs",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ec0936d1cc314de",
            "route_table_id": "rtb-08666577dd6e1b73e",
            "subnet_id": "subnet-02c81cecc5df3fdd4"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_s3_endpoint",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008b2d8cd26819994",
            "route_table_id": "rtb-04df4c97cb537adf5",
            "subnet_id": "subnet-0e9adedc1c1082a53"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654249071:security-group/sg-0176f1cf1ceb63ac9",
            "description": "Security group for DocumentDB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0176f1cf1ceb63ac9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "product-processor-docdb-sg",
            "name_prefix": "",
            "owner_id": "654654249071",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06a8b5d5401c4bb0d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_docdb_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654249071:subnet/subnet-0e3d1e647eb645caf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3d1e647eb645caf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654249071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "product-processor-private-docdb-subnet-1a"
            },
            "tags_all": {
              "Name": "product-processor-private-docdb-subnet-1a"
            },
            "vpc_id": "vpc-06a8b5d5401c4bb0d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_docdb_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654249071:subnet/subnet-0b01873229d4e0203",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b01873229d4e0203",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654249071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "product-processor-private-docdb-subnet-1c"
            },
            "tags_all": {
              "Name": "product-processor-private-docdb-subnet-1c"
            },
            "vpc_id": "vpc-06a8b5d5401c4bb0d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654249071:subnet/subnet-0144e27dbfce0996b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0144e27dbfce0996b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654249071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "product-processor-private-ecs-subnet"
            },
            "tags_all": {
              "Name": "product-processor-private-ecs-subnet"
            },
            "vpc_id": "vpc-06a8b5d5401c4bb0d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654249071:subnet/subnet-02c81cecc5df3fdd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c81cecc5df3fdd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654249071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "product-processor-private-s3-endpoint-subnet"
            },
            "tags_all": {
              "Name": "product-processor-private-s3-endpoint-subnet"
            },
            "vpc_id": "vpc-06a8b5d5401c4bb0d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654249071:subnet/subnet-0e9adedc1c1082a53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9adedc1c1082a53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654249071",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "product-processor-public-subnet"
            },
            "tags_all": {
              "Name": "product-processor-public-subnet"
            },
            "vpc_id": "vpc-06a8b5d5401c4bb0d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654249071:vpc/vpc-06a8b5d5401c4bb0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05f032906852123f3",
            "default_route_table_id": "rtb-0d3f9332e9c8879c0",
            "default_security_group_id": "sg-0e0848fba0c86c416",
            "dhcp_options_id": "dopt-019f869e14db5bb52",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06a8b5d5401c4bb0d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d3f9332e9c8879c0",
            "owner_id": "654654249071",
            "tags": {
              "Name": "product-processor-vpc"
            },
            "tags_all": {
              "Name": "product-processor-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:654654249071:vpc-endpoint/vpce-06d877c5054bed189",
            "cidr_blocks": [
              "52.219.44.0/22",
              "52.219.208.0/22",
              "3.5.136.0/22",
              "52.219.218.0/24",
              "52.219.140.0/24",
              "16.12.32.0/22",
              "52.219.72.0/22",
              "3.5.134.0/23",
              "16.12.24.0/21",
              "52.219.168.0/22"
            ],
            "id": "vpce-06d877c5054bed189",
            "owner_id": "654654249071",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ea54007",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-08666577dd6e1b73e"
            ],
            "service_name": "com.amazonaws.eu-central-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06a8b5d5401c4bb0d"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    }
  ]
}